--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/coderlibs/koa-server-template/issues"
   },
-  "homepage": "https://github.com/coderlibs/koa-server-template#readme"
+  "homepage": "https://github.com/coderlibs/koa-server-template#readme",
+  "dependencies": {
+    "koa": "^2.15.3",
+    "koa-body": "^6.0.1",
+    "koa-router": "^12.0.1"
+  }
 }
