--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "基于koa封装的开箱即用的node服务端项目模板",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "export NODE_ENV=development&&nodemon app.js",
+    "win:dev": "set NODE_ENV=development&&nodemon app.js",
+    "start": "export NODE_ENV=production&&node app.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   "dependencies": {
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
-    "koa-router": "^12.0.1"
+    "koa-router": "^12.0.1",
+    "nodemon": "^3.1.0"
   }
 }
