--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "export NODE_ENV=development&&nodemon app.js",
     "win:dev": "set NODE_ENV=development&&nodemon app.js",
-    "start": "export NODE_ENV=production&&node app.js"
+    "start": "export NODE_ENV=production&&node app.js",
+    "clear:log": "rm -rf ./logs/*"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,27 @@
   },
   "homepage": "https://github.com/coderlibs/koa-server-template#readme",
   "dependencies": {
-    "koa": "^2.15.3",
+    "@alicloud/pop-core": "^1.7.12",
+    "ali-oss": "^6.17.1",
+    "axios": "^1.1.3",
+    "crypto": "^1.0.1",
+    "ip2region": "^2.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.13.4",
     "koa-body": "^6.0.1",
-    "koa-router": "^12.0.1",
-    "nodemon": "^3.1.0"
+    "koa-compress": "^5.1.1",
+    "koa-jwt": "^4.0.3",
+    "koa-log4": "^2.3.2",
+    "koa-router": "^12.0.0",
+    "koa-server-static": "^1.0.0",
+    "koa2-connect-history-api-fallback": "^0.1.3",
+    "koa2-cors": "^2.0.6",
+    "lodash": "^4.17.21",
+    "module-alias": "^2.2.3",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
+    "sharp": "^0.33.2",
+    "uuid": "^9.0.0"
   }
 }
